--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           images: marvinjwendt/${{ github.event.repository.name }}
           tags: |
-            type=ref,event=pr
+            type=edge
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=sha
