--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -14,7 +14,6 @@ jobs:
 
       - name: Login to Docker
         uses: docker/login-action@v1
-        # if: ${{ startsWith(github.ref, 'refs/tags/v') }}
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
@@ -26,8 +25,9 @@ jobs:
           images: marvinjwendt/${{ github.event.repository.name }}
           tags: |
             type=edge
-            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}
             type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{version}}
           labels: |
             org.label-schema.vcs-url=https://github.com/${{ github.repository }}.git
             org.label-schema.schema-version=1.0.0-rc1
